@@ -1,3 +1,10 @@
+Mon Jul 13 22:49:50 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
+
+	* lib/prime.rb (Prime#prime_division): now decomposes
+	  negative integer into a decomposition with element [-1, 1].
+
+	* test/test_prime.rb: test for it.
+
 Mon Jul 13 22:28:03 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* io.c (pipe_open): handles leaked on win32 when an error occurs.
